--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {},
